# monorepo

./: .bazelrc  .gitignore  MODULE.bazel  Makefile  README.md  WORKSPACE  java.bazelproject  maven_install.json
.github/workflows/: ci.yml
project/bazel/java/: java.bazelproject
project/bazel/python/: python.bazelproject
project/intellij/java/: java.bazelproject
project/intellij/python/: python.bazelproject
src/ansible/: Makefile  hosts
src/ansible/conf/: mcadiz-nginx.conf
src/ansible/playbooks/: add-superusers.yml  enable-ssl.yml  install-packages.yml  setup-cadizm.yml  setup-docker.yml  setup-nginx.yml
src/ansible/vars/: hosts.yml  users.yml
src/apps/helloworld/: Dockerfile  Makefile  README.md
src/cpp/hello/lib/: BUILD  hello-time.cc
src/cpp/hello/main/: BUILD  hello-greet.cc  hello-world.cc
src/java/com/cadizm/graph/: BUILD  DepthFirstSearch.java  Node.java
src/java/com/cadizm/io/: BUILD  Resource.java
src/java/com/cadizm/math/: BUILD  Digit.java  Int.java  Maths.java  Product.java
src/java/com/cadizm/matrix/: BUILD  Matrix.java
src/python/cadizm/: BUILD  __init__.py  hello.py
src/python/cadizm/accounting/: BUILD  amortization.py
src/python/cadizm/aoc/: BUILD
src/python/cadizm/fling/: BUILD  fling.py
src/python/cadizm/foo/: BUILD
src/python/cadizm/util/: BUILD  resources.py
src/resources/aoc/2022/: BUILD
src/resources/aoc/2023/: BUILD
src/resources/springboot/: BUILD  application.properties
src/terraform/lightsail/mcadiz/: README.md  main.tf
test/python/cadizm/: test_hello.py
tests/python/cadizm/: BUILD
(+137 files in other folders)
