# https://github.com/bazelbuild/rules_jvm_external/blob/master/docs/bzlmod.md
bazel_dep(name = 'rules_jvm_external', version = '5.3')

maven = use_extension('@rules_jvm_external//:extensions.bzl', 'maven')

maven.install(
    artifacts = [
        'com.google.guava:guava:32.1.3-jre',
        'org.projectlombok:lombok:1.18.30',
        'org.junit.jupiter:junit-jupiter-api:5.10.1',
        'org.junit.jupiter:junit-jupiter-engine:5.10.1',

    ],
    lock_file = '//:maven_install.json',
)

use_repo(maven, 'maven', 'unpinned_maven')
